--- a/app/components/Droppable/Droppable.module.css
+++ b/app/components/Droppable/Droppable.module.css
@@ -1,10 +1,9 @@
 .Droppable {
   position: relative;
-  padding-top: 80px;
+  padding: 7px 7px;
   text-align: center;
   border-radius: 10px;
-  width: 140px;
-  height: 140px;
+  margin: 0.5rem /* 8px */;
   box-sizing: border-box;
   background-color: #fff;
   box-shadow: inset rgba(201, 211, 219, 0.5) 0 0 0 2px,
@@ -15,7 +14,7 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    width: 200px;
+    width: 70px;
     transform: translate3d(-50%, -50%, 0);
     opacity: 0.8;
     transition: opacity 300ms ease, transform 200ms ease;
